Delete and associate transaction quicker